feat(147): use element instance instead of tokens for modifying process instance
