# internal/cluster/server/server.go
@@ -376,43 +376,6 @@ func (s *Server) StartProcessInstanceOnElements(ctx context.Context, req *proto.
 	}, nil
 }
 
-func (s *Server) GetExecutionTokens(ctx context.Context, req *proto.GetExecutionTokensRequest) (*proto.GetExecutionTokensResponse, error) {
-	partitionId := zenflake.GetPartitionId(req.GetProcessInstanceKey())
-	queries := s.controller.PartitionQueries(ctx, partitionId)
-	if queries == nil {
-		err := fmt.Errorf("queries for partition %d not found", partitionId)
-		return &proto.GetExecutionTokensResponse{
-			Error: &proto.ErrorResult{
-				Code:    nil,
-				Message: ptr.To(err.Error()),
-			},
-		}, err
-	}
-	tokens, err := queries.GetTokensForProcessInstance(ctx, req.GetProcessInstanceKey())
-	if err != nil {
-		err := fmt.Errorf("failed to find process instance execution tokens for instance %d", req.GetProcessInstanceKey())
-		return &proto.GetExecutionTokensResponse{
-			Error: &proto.ErrorResult{
-				Code:    nil,
-				Message: ptr.To(err.Error()),
-			},
-		}, err
-	}
-	result := make([]*proto.ExecutionToken, len(tokens))
-	for i, job := range tokens {
-		result[i] = &proto.ExecutionToken{
-			Key:                &job.Key,
-			ElementInstanceKey: &job.ElementInstanceKey,
-			ElementId:          &job.ElementID,
-			ProcessInstanceKey: &job.ProcessInstanceKey,
-			State:              &job.State,
-		}
-	}
-	return &proto.GetExecutionTokensResponse{
-		Tokens: result,
-	}, nil
-}
-
 func (s *Server) ModifyProcessInstance(ctx context.Context, req *proto.ModifyProcessInstanceRequest) (*proto.ModifyProcessInstanceResponse, error) {
 	engine := s.GetRandomEngine(ctx)
 	if engine == nil {
@@ -436,7 +399,7 @@ func (s *Server) ModifyProcessInstance(ctx context.Context, req *proto.ModifyPro
 		}, err
 	}
 	var instance *runtime.ProcessInstance
-	instance, tokens, err := engine.ModifyInstance(ctx, *req.ProcessInstanceKey, req.TokenKeysToTerminate, req.TokensToStartAtElement, vars)
+	instance, tokens, err := engine.ModifyInstance(ctx, *req.ProcessInstanceKey, req.ElementInstanceIdsToTerminate, req.ElementIdsToStartInstance, vars)
 	if err != nil {
 		err := fmt.Errorf("failed to modify process instance: %w", err)
 		return &proto.ModifyProcessInstanceResponse{
@@ -464,6 +427,7 @@ func (s *Server) ModifyProcessInstance(ctx context.Context, req *proto.ModifyPro
 			ElementInstanceKey: &token.ElementInstanceKey,
 			ElementId:          &token.ElementId,
 			ProcessInstanceKey: &token.ProcessInstanceKey,
+			CreatedAt:          ptr.To(token.CreatedAt.UnixMilli()),
 			State:              ptr.To(int64(token.State)),
 		})
 	}
@@ -732,6 +696,44 @@ func (s *Server) GetProcessInstance(ctx context.Context, req *proto.GetProcessIn
 			},
 		}, err
 	}
+
+	queries := s.controller.PartitionQueries(ctx, partitionId)
+	if queries == nil {
+		err := fmt.Errorf("queries for partition %d not found", partitionId)
+		return &proto.GetProcessInstanceResponse{
+			Error: &proto.ErrorResult{
+				Code:    nil,
+				Message: ptr.To(err.Error()),
+			},
+		}, err
+	}
+
+	activeStates := []int64{int64(runtime.TokenStateWaiting), int64(runtime.TokenStateRunning), int64(runtime.TokenStateFailed)}
+	tokens, err := queries.GetTokensForProcessInstance(ctx, sql.GetTokensForProcessInstanceParams{
+		ProcessInstanceKey: req.GetProcessInstanceKey(),
+		States:             activeStates,
+	})
+	if err != nil {
+		err := fmt.Errorf("failed to find process instance execution tokens for instance %d", req.GetProcessInstanceKey())
+		return &proto.GetProcessInstanceResponse{
+			Error: &proto.ErrorResult{
+				Code:    nil,
+				Message: ptr.To(err.Error()),
+			},
+		}, err
+	}
+	respTokens := make([]*proto.ExecutionToken, 0, len(tokens))
+	for _, token := range tokens {
+		respTokens = append(respTokens, &proto.ExecutionToken{
+			Key:                &token.Key,
+			ElementInstanceKey: &token.ElementInstanceKey,
+			ElementId:          &token.ElementID,
+			ProcessInstanceKey: &token.ProcessInstanceKey,
+			CreatedAt:          &token.CreatedAt,
+			State:              &token.State,
+		})
+	}
+
 	vars, err := json.Marshal(instance.VariableHolder.Variables())
 	if err != nil {
 		err := fmt.Errorf("failed to marshal variables of process instance %d", req.GetProcessInstanceKey())
@@ -751,6 +753,7 @@ func (s *Server) GetProcessInstance(ctx context.Context, req *proto.GetProcessIn
 			CreatedAt:     ptr.To(instance.CreatedAt.UnixMilli()),
 			DefinitionKey: &instance.Definition.Key,
 		},
+		ExecutionTokens: respTokens,
 	}, nil
 }
 
